[package]
name = "peekr"
version = "0.0.0"
description = "Real-time Information display app for Distance"
edition = "2018"
build = "src/build.rs"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort"
codegen-units = 1
lto = "fat"
opt-level = "s"

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
parking_lot = "0.11"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.8", features = ["window-all"] }
peekr-core = { path = "./peekr-core" }
